Completed the index page css before login. Fixed issue with sizing on mobile view.

--- a/public/styles.css
+++ b/public/styles.css
@@ -63,3 +63,20 @@ body {
 .genericFormDiv > form > h1 {
   text-align: center;
 }
+
+#title {
+  font-family: "Archivo", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 800;
+  font-style: normal;
+  font-variation-settings: "wdth" 100;
+}
+
+#titleIndex {
+  font-family: "Archivo", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 800;
+  font-style: normal;
+  font-variation-settings: "wdth" 100;
+  color:rgb(1, 26, 99);
+}
